--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -1,6 +1,6 @@
 \chapter{Background}
 
-The purpose of this chapter is to assist the reader in understanding the search techniques used in this work. Several different population based search algorithms, including a genetic algorithm, restarting genetic algorithm, differential evolution, and particle swarm optimization are defined in this chapter.
+The purpose of this chapter is to assist the reader in understanding the search techniques used in this thesis. Several different population based search algorithms, including a genetic algorithm, restarting genetic algorithm, differential evolution, and particle swarm optimization are defined in this chapter.
 
 \input{background/ea}
 % \input{background/ga}
