--- a/doc/thesis/experimental-design/ea.tex
+++ b/doc/thesis/experimental-design/ea.tex
@@ -52,3 +52,25 @@ The DE, and PSO experiments were initially run using a variety of different tuni
 	\label{table:ea-de}
 \end{table}
 
+\begin{table}
+	\centering
+	\begin{tabular}{ | c | c | }
+		\hline
+		Inertia & 0.729844 \\ \hline
+		Social & 1.496180 \\ \hline
+		Cognitive & 1.496180 \\ \hline
+	\end{tabular}
+	\caption{Algorithm parameters for the PSO runs}
+	\label{table:ea-pso-algo}
+\end{table}
+
+\begin{table}
+	\centering
+	\begin{tabular}{ | c | c | }
+		\hline
+		Differential Weight & 0.4717 \\ \hline
+		Crossover Probability & 0.8803 \\ \hline
+	\end{tabular}
+	\caption{Algorithm parameters for the DE runs}
+	\label{table:ea-de-algo}
+\end{table}
