--- a/doc/thesis/experimental-design/ga.tex
+++ b/doc/thesis/experimental-design/ga.tex
@@ -7,7 +7,7 @@ The purpose of this study is to determine how well a genetic algorithm performs 
 
 \subsection{Population}
 
-During the initial stages of testing a random population of candidate solutions was generated using the technique described in Subsection~\ref{subsec:random-population}. The candidate solutions that were generated using the random method had either high fitness scores, or were chemically infeasible and an EXAFS spectrum could not be generated. Candidate solutions that were able to generate EXAFS spectra were repeatedly generated until there were enough to fill the GA population but the experiments were unable to produce a candidate solution that had an EXAFS spectrum that improved upon the starting candidate.
+During the initial stages of testing, a random population of candidate solutions was generated using the technique described in Subsection~\ref{subsec:random-population}. The candidate solutions that were generated using the random method had either high fitness scores, or were chemically infeasible and an EXAFS spectrum could not be generated. Candidate solutions that were able to generate EXAFS spectra were repeatedly generated until there were enough to fill the GA population but the experiments were unable to produce a candidate solution that had an EXAFS spectrum that improved upon the starting candidate.
 
 This led to a change in the way the initial population was created. The initial population for the basic GA, and RGA was created from a random sampling of the 300 candidate solutions that were generated using the molecular dynamics simulation discussed in Subsection~\ref{subsec:molecular-population}. During the restarting process of the RGA new candidate solutions were randomly selected from the remaining candidate solutions within the 300.
 
