--- a/doc/thesis/introduction.tex
+++ b/doc/thesis/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-The aim of this thesis is to find a better method for determining the atomic structure of a molecule using Extended X-Ray Absorption Fine Structure (EXAFS). The thesis uses the oxygen-evolving complex (OEC) in state S$_{1}$ as an example for structure refinement but the developed process can be applied to any given chemical structure that has undergone x-ray absorption spectroscopy experimentation. In this chapter, we introduce the biological background and terms, followed by the problem definition, and finally elaborate on the computer science theories applied to the problem.
+The aim of this thesis is to find a better method for determining the atomic structure of a molecule using extended X-ray absorption fine structure (EXAFS). The thesis uses the oxygen-evolving complex (OEC) in state S$_{1}$ as an example for structure refinement. The developed process can be applied to any given chemical structure that has undergone x-ray absorption spectroscopy experimentation. In this chapter, we introduce the biological background and terms, followed by the problem definition, and finally elaborate on the computer science theories applied to the problem.
 
 \input{introduction/biological}
 \input{introduction/exafs}
