--- a/doc/thesis/introduction/organization.tex
+++ b/doc/thesis/introduction/organization.tex
@@ -1,3 +1,3 @@
 \section{Thesis Organization}
 
-The remainder of this thesis is organized as follows. Chapter 2 gives an overview of the various search algorithms used in this work. This chapter gives a clear overview of what an evolutionary algorithm is and provides details on the different implementations of genetic algorithms, restarting genetic algorithms, differential evolution, and particle swarm optimization. Chapter 3 discusses previous research that has been performed on the structure refinement problem and how other algorithms were used on similar problems. Chapter 4 provides implementation details for the various algorithms, such as the problem encoding and population generation. Chapter 5 outlines the different experiments that will be performed in this work. Chapter 6 discusses the results from the experiments performed and provides detailed analysis of the findings. Chapter 7 summarizes the research conducted and outlines possible future work. Appendices are also included in this thesis. The appendices contain summary tables of the best fitness score found in each run for all experiments.
+The remainder of this thesis is organized as follows. Chapter 2 gives an overview of the various search algorithms used in this work. This chapter gives an overview of evolutionary algorithms, and provides details on the different implementations of genetic algorithms, restarting genetic algorithms, differential evolution, and particle swarm optimization. Chapter 3 discusses previous research that has been performed on the structure refinement problem and how other algorithms were used on similar problems. Chapter 4 provides implementation details for the various algorithms, such as the problem encoding and population generation. Chapter 5 outlines the different experiments that will be performed. Chapter 6 discusses the results from the experiments performed and provides detailed analysis of the findings. Chapter 7 summarizes the research conducted and outlines possible future work. Appendices are also included in this thesis. The appendices contain summary tables of the best fitness score found in each run for all experiments.
