--- a/doc/thesis/introduction/problem-definition.tex
+++ b/doc/thesis/introduction/problem-definition.tex
@@ -1,11 +1,11 @@
 \section[Problem Definition: Structure Refinement Problem]{Problem Definition: Structure Refinement\\ Problem}
 \label{sec:problem-definition}
 
-The goal of this thesis is to examine different search heuristics to determine the best method of finding the theoretical atomic structure of a molecule using the molecule's EXAFS spectrum for comparison. This problem contains two important but unrelated goals. Firstly, the algorithm must be able to find an atomic structure whose EXAFS spectrum matches the experimental EXAFS spectrum, and secondly, the algorithm should create an atomic structure whose potential energy is as low as possible.
+The goal of this thesis is to examine different search heuristics to determine the best method of finding the theoretical atomic structure of a molecule using the molecule's EXAFS spectrum for comparison. This problem contains two important but unrelated goals. The algorithm must be able to find an atomic structure whose EXAFS spectrum matches the experimental EXAFS spectrum and has relatively low energy.
 
-EXAFS can be used to identify properties of a molecule, but they do not provide enough detail to determine the atomic structure of a molecule in 3-dimensional space. An EXAFS spectrum allows you to identify how far apart atoms are from each other, but does not give enough information to identify their dihedral angles. Fortunately, EXAFS can be used to assist in determining the atomic structure of a molecule. The energy spectrum given off by the molecule is unique to its structure, meaning that you can create an atomic structure, obtain its EXAFS spectrum, and compare the results. The hope is that if you create an atomic structure whose EXAFS spectrum closely matches the EXAFS spectrum of an actual model, then there is a high likelihood that the created structure will closely match the actual structure.
+EXAFS can be used to identify properties of a molecule, but they do not provide enough detail to determine the atomic structure of a molecule in 3-dimensional space. An EXAFS spectrum allows you to identify how far apart atoms are from each other. Although it does not give enough information to identify their dihedral angles. Fortunately, EXAFS can be used to assist in determining the atomic structure of a molecule. The energy spectrum given off by the molecule is unique to its structure, which means that you can create an atomic structure, obtain its EXAFS spectrum, and compare the results. The hope is that if you create an atomic structure whose EXAFS spectrum closely matches the EXAFS spectrum of an actual model, then there is a high likelihood that the created structure will closely match the actual structure.
 
-Using EXAFS spectrum comparison the goal is to obtain a set of candidate atomic structures. Atomic structures that generate similar EXAFS spectra may have different geometries. An expert will have to analyse the candidate solutions to determine if any of these atomic structures are actually chemically infeasible. Having a set of candidate solutions will improve the odds of finding the actual solution.
+Using EXAFS spectrum comparison, the goal is to obtain a set of candidate atomic structures. Atomic structures that generate similar EXAFS spectra may have different geometries. An expert will have to analyse the candidate solutions to determine if any of these atomic structures are actually chemically feasible. Having a set of candidate solutions will improve the odds of finding the actual solution.
 
 The IFEFFIT XAFS data analysis suite~\cite{ifeffit} is used to simulate the EXAFS experiments. This suite includes two applications that will be used: FEFF6, and IFEFFIT. FEFF6 is used to simulate an XAFS experiment and IFEFFIT does post processing of the simulated EXAFS spectra. During the atomic structure refinement, the generated atomic structures will be run through these applications to obtain an EXAFS spectrum.
 
