--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -1,6 +1,6 @@
 \chapter{Previous Research}
 
-Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain related research in this field. Section~\ref{sec:prev-work} reviews the previous work that has been done on the structure refinement of OEC and Section~\ref{sec:prev-app} reviews research that has been performed on structure refinement in other applications.
+Before we can begin explaining the techniques we used in the next chapter, it is necessary that we survey related research in this field. Section~\ref{sec:prev-work} reviews the previous work that has been done on the structure refinement of OEC and Section~\ref{sec:prev-app} reviews research that has been performed on structure refinement in other applications.
 
 \section{Quantum Mechanics/Molecular Mechanics}
 \label{sec:prev-work}
@@ -28,7 +28,7 @@ Later in ~\cite{luber2011s1} the same research group repeated their original exp
 
 \subsection{Genetic Algorithm}
 
-A study conducted in 1999 by W. Cai et al.~\cite{cai1999analysis} had success in EXAFS fitting using an annealing evolutionary algorithm. The researchers combined a genetic algorithm with a simulated annealing algorithm in order to locate the global optima. During each generation new candidate solutions were either accepted or rejected according to the Metropolis criterion, which is used to control the distribution of the population. For their EXAFS spectrum analysis the researchers were able to generate an EXAFS spectrum using an equation. The equation was able to generate an EXAFS spectrum based on five structural control parameters: coordination distance (\textit{r}), coordination number (\textit{N}), Debye-Waller factor ($\sigma$), electron mean free path ($\lambda$) and $\Delta{E_{0}}$. The control parameters were randomly generated using specific constraints for each. Least squares fitting was used as an objective function between the experimental and calculated EXAFS spectra. The experimental EXAFS spectrum was generated from two Cu samples. Using the annealing evolutionary algorithm, the researchers were able to find more accurate results than existing methods at the time.
+A study conducted in ~\cite{cai1999analysis} had success in EXAFS fitting using an annealing evolutionary algorithm. The researchers combined a genetic algorithm with a simulated annealing algorithm in order to locate the global optima. During each generation new candidate solutions were either accepted or rejected according to the Metropolis criterion, which is used to control the distribution of the population. For their EXAFS spectrum analysis the researchers were able to generate an EXAFS spectrum using an equation. The equation was able to generate an EXAFS spectrum based on five structural control parameters: coordination distance (\textit{r}), coordination number (\textit{N}), Debye-Waller factor ($\sigma$), electron mean free path ($\lambda$) and $\Delta{E_{0}}$. The control parameters were randomly generated using specific constraints for each. Least squares fitting was used as an objective function between the experimental and calculated EXAFS spectra. The experimental EXAFS spectrum was generated from two Cu samples. Using the annealing evolutionary algorithm, the researchers were able to find more accurate results than existing methods at the time.
 
 \section{Previous Applications}
 \label{sec:prev-app}
@@ -37,14 +37,14 @@ In this section, we look at previous applications of GA, DE, and PSO to biologic
 
 \subsection{Genetic Algorithms}
 
-In ~\cite{comte2010bio} P. Comte used a genetic algorithm to search for solutions to the side-chain packing problem. Each chromosome represented a list of amino-acid residues with a possible rotamer. Comte's method was able to find improved low energy conformations over conventional methods.
+In ~\cite{comte2010bio} a genetic algorithm is used to search for solutions to the side-chain packing problem. Each chromosome represented a list of amino-acid residues with a possible rotamer. The method was able to find improved low energy conformations over conventional methods.
 
-The Laboratory of Crystallography in Zurich, Switzerland developed a method~\cite{oganov2006crystal} for predicting stable crystal structures and low-energy structures using a genetic algorithm. Each chromosome represented a possible crystal structure, which is a set of atomic coordinates. The GA population was produced either randomly or by user input. Populations were also seeded by the best found crystal structures of previous GA experiments. The lab tested both traditional methods such as simulated annealing and basin hopping against their evolutionary algorithms, but preferred the results of the evolutionary algorithm because of its ability to find solutions without knowledge of the problem itself and its ability to move out of local optima.
+The Laboratory of Crystallography in Zurich, Switzerland developed a method for predicting stable crystal structures and low-energy structures using a genetic algorithm~\cite{oganov2006crystal}. Each chromosome represented a possible crystal structure, which is a set of atomic coordinates. The GA population was produced either randomly or by user input. Populations were also seeded by the best found crystal structures of previous GA experiments. The lab tested both traditional methods such as simulated annealing and basin hopping against their evolutionary algorithms, but preferred the results of the evolutionary algorithm because of its ability to find solutions without knowledge of the problem itself and its ability to move out of local optima.
 
 \subsection{Differential Evolution}
 
-In 2010 Kalegari and Lopes used a differential evolution algorithm for protein structure optimization~\cite{kalegari2010differential}. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to constrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angles between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
+In ~\cite{kalegari2010differential} a differential evolution algorithm for protein structure optimization. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to constrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angles between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
 
 \subsection{Particle Swarm Optimization}
 
-Wang, Lv, Zhu, and Ma attempted crystal structure prediction using particle swarm optimization~\cite{wang2010crystal}. PSO was selected for comparison against traditional evolutionary methods. The goal was to find optimal structures with the lowest energy. The initial population was generated randomly based on a starting structure. Each of the new random structures was optimized locally before starting the PSO experiment. The local optimization was done using traditional conjugate gradient algorithms. The researchers found that PSO was an efficient method for finding low energy atomic configurations.
+In ~\cite{wang2010crystal} particle swarm optimization was used to prediction crystal structures. PSO was selected for comparison against traditional evolutionary methods. The goal was to find optimal structures with the lowest energy. The initial population was generated randomly based on a starting structure. Each of the new random structures was optimized locally before starting the PSO experiment. The local optimization was done using traditional conjugate gradient algorithms. The researchers found that PSO was an efficient method for finding low energy atomic configurations.
