--- a/doc/thesis/analysis/ga.tex
+++ b/doc/thesis/analysis/ga.tex
@@ -9,7 +9,7 @@ Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a s
 		\hline
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
 		Best RMSD & 1.2471 & 1.1880 & 1.1173 & 1.2349 & \textbf{1.0533} & 1.2287 \\ \hline
-		Averge Best RMSD & 1.3518 & 1.3610 & \textbf{1.2942} & 1.3658 & 1.3044 & 1.3294 \\ \hline
+		Average Best RMSD & 1.3518 & 1.3610 & \textbf{1.2942} & 1.3658 & 1.3044 & 1.3294 \\ \hline
 	\end{tabular}
 	\caption{Basic GA Results}
 	\label{table:basic-ga-results}
@@ -37,7 +37,7 @@ Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a s
 	\label{table:rga-results}
 \end{table}
 
-The Mann-Whitney U test~\cite{mcknight2010mann} is a nonparametric test to determine if two groups are equivalent without assuming the groups have a normal distribution. Mann-Whitney U tests were performed on the results of the basic GA, and RGA experiment sets. The results of the basic GA experiments showed very little statistical significance. Experiments 3 and 5 show the best statistical performance over the other experiments which coincides with these experiments having the best fitness and average fitness scores. The results of the RGA experiments revealed that experiment 8 was able to perform statistically better than the other experiments. Experiments 3, 4, 5, 6, and 7 show little statistical difference and experiments 1, and 2 performed the worst. A comparison of the basic GA, and RGA experiments showed that the RGA performed statistically better than the basic GA.
+The Mann-Whitney U test~\cite{mcknight2010mann} is a nonparametric test to determine if two groups are equivalent without assuming the groups have a normal distribution. Mann-Whitney U tests were performed on the results of the basic GA, and RGA experiment sets. The results of the basic GA experiments in Table~\ref{table:basic-ga-results} showed very little statistical significance. Experiments 3 and 5 show the best statistical performance over the other experiments which coincides with these experiments having the best fitness and average fitness scores. The results of the RGA experiments revealed that experiment 8 was able to perform statistically better than the other experiments. Experiments 3, 4, 5, 6, and 7 show little statistical difference and experiments 1, and 2 performed the worst. A comparison of the basic GA, and RGA experiments showed that the RGA performed statistically better than the basic GA.
 
 A closer look at the data revealed that the basic GA experiments were converging early on local optima. The RGA experiments initially converged on similar optima but were able to find new optima after each restarting phase. Figure~\ref{fig:rga-generational-data} shows what a typical RGA run looks like at each generation. One would notice that there are several \textit{spikes} in the graph where the average fitness jumps. These \textit{spikes} represent a \textit{restart} in the population. During each \textit{restart} the average fitness of the population is disrupted but the fitness quickly improved showing an overall downward trend.
 
