--- a/doc/thesis/methodology/population-generation.tex
+++ b/doc/thesis/methodology/population-generation.tex
@@ -8,36 +8,36 @@ An initial population of different individuals needed to be created in order to 
 \subsection{Random}
 \label{subsec:random-population}
 
-A population can be generated randomly based on a starting molecule. To create a random candidate individual each atomic position within the atomic structure is randomly moved by a \textit{user defined range}. This means that if the \textit{user defined range} is 0.05\AA\ each atomic position is randomly shifted $\pm$0.05\AA. Using Representation 2 as defined in Subsection~\ref{subsec:encoding-2} as an example, Figure~\ref{fig:random-shift} demonstrates how each atomic position is randomly shifted by 0.05\AA.
+A population can be generated randomly based on a starting molecule. To create a random candidate individual each atomic position within the atomic structure is randomly moved by a \textit{user defined range}. This means that if the \textit{user defined range} is 0.05\AA\ then each atomic position will be randomly moved to a new atomic position that is a euclidean distance 0.05\AA\ away from its original position.
 
-\begin{figure}
-	\centering
-	\begin{tabular}{ | l | }
-		\hline
-		14.451 \\ \hline
-		-13.346 \\ \hline
-		1.133 \\ \hline
-		15.336 \\ \hline
-		-13.488 \\ \hline
-		2.014 \\ \hline
-		13.005 \\ \hline
-		... \\ \hline
-	\end{tabular}
-	\qquad$\implies$\qquad
-	\begin{tabular}{ | l | }
-		\hline
-		14.494 \\ \hline
-		-13.370 \\ \hline
-		1.132 \\ \hline
-		15.295 \\ \hline
-		-13.518 \\ \hline
-		2.009 \\ \hline
-		13.018 \\ \hline
-		... \\ \hline
-	\end{tabular}
-	\caption{Randomly shifting atomic positions by 0.05\AA}
-	\label{fig:random-shift}
-\end{figure}
+% \begin{figure}
+% 	\centering
+% 	\begin{tabular}{ | l | }
+% 		\hline
+% 		14.451 \\ \hline
+% 		-13.346 \\ \hline
+% 		1.133 \\ \hline
+% 		15.336 \\ \hline
+% 		-13.488 \\ \hline
+% 		2.014 \\ \hline
+% 		13.005 \\ \hline
+% 		... \\ \hline
+% 	\end{tabular}
+% 	\qquad$\implies$\qquad
+% 	\begin{tabular}{ | l | }
+% 		\hline
+% 		14.494 \\ \hline
+% 		-13.370 \\ \hline
+% 		1.132 \\ \hline
+% 		15.295 \\ \hline
+% 		-13.518 \\ \hline
+% 		2.009 \\ \hline
+% 		13.018 \\ \hline
+% 		... \\ \hline
+% 	\end{tabular}
+% 	\caption{Randomly shifting atomic positions by 0.05\AA}
+% 	\label{fig:random-shift}
+% \end{figure}
 
 \subsection{Molecular Dynamics Simulation}
 \label{subsec:molecular-population}
